test/cases/compile_errors/stage1/obj/C_pointer_pointing_to_non_C_ABI_compatible_type_or_has_align_attr.zig
const Foo = struct {};
export fn a() void {
    const T = [*c]Foo;
    var t: T = undefined;
    _ = t;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:19: error: C pointers cannot point to non-C-ABI-compatible type 'Foo'
